tests/compilation_errors/systems_with_missing_component_param.stderr
error[E0034]: multiple applicable items in scope
 --> $DIR/systems_with_missing_component_param.rs:4:5
  |
4 |     system!(only_option_component);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ multiple `check_component_params` found
  |
  = note: candidate #1 is defined in an impl of the trait `modor::SystemWithParams` for the type `SystemComponentParamChecker<'a, 'b, S, T>`
  = note: candidate #2 is defined in an impl of the trait `modor::SystemWithMissingComponentParam` for the type `SystemComponentParamChecker<'a, 'b, S, (A,)>`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: disambiguate the associated function for candidate #1
  |
29|                     system = modor::SystemWithParams::check_component_params(::modor::SystemComponentParamChecker::new(system))
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the associated function for candidate #2
  |
29|                     system = modor::SystemWithMissingComponentParam::check_component_params(::modor::SystemComponentParamChecker::new(system))
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
 --> $DIR/systems_with_missing_component_param.rs:5:5
  |
5 |     system!(only_group);
  |     ^^^^^^^^^^^^^^^^^^^^ multiple `check_component_params` found
  |
  = note: candidate #1 is defined in an impl of the trait `modor::SystemWithParams` for the type `SystemComponentParamChecker<'a, 'b, S, T>`
  = note: candidate #2 is defined in an impl of the trait `modor::SystemWithMissingComponentParam` for the type `SystemComponentParamChecker<'a, 'b, S, (A,)>`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: disambiguate the associated function for candidate #1
  |
29|                     system = modor::SystemWithParams::check_component_params(::modor::SystemComponentParamChecker::new(system))
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the associated function for candidate #2
  |
29|                     system = modor::SystemWithMissingComponentParam::check_component_params(::modor::SystemComponentParamChecker::new(system))
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
  --> $DIR/systems_with_missing_component_param.rs:6:5
   |
6  |     system!(multiple_not_component_entity_params);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ multiple `check_component_params` found
   |
   = note: candidate #1 is defined in an impl of the trait `modor::SystemWithParams` for the type `SystemComponentParamChecker<'a, 'b, S, T>`
note: candidate #2 is defined in the trait `modor::SystemWithMissingComponentParam`
  --> $DIR/component_params.rs:38:5
   |
38 |     fn check_component_params(self) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: disambiguate the associated function for candidate #1
   |
296|                     system = modor::SystemWithParams::check_component_params(::modor::SystemComponentParamChecker::new(system))
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the associated function for candidate #2
   |
296|                     system = modor::SystemWithMissingComponentParam::check_component_params(::modor::SystemComponentParamChecker::new(system))
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
  --> $DIR/systems_with_missing_component_param.rs:7:5
   |
7  |     system!(not_component_entity_params_and_query);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ multiple `check_component_params` found
   |
   = note: candidate #1 is defined in an impl of the trait `modor::SystemWithParams` for the type `SystemComponentParamChecker<'a, 'b, S, T>`
note: candidate #2 is defined in the trait `modor::SystemWithMissingComponentParam`
  --> $DIR/component_params.rs:38:5
   |
38 |     fn check_component_params(self) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: disambiguate the associated function for candidate #1
   |
296|                     system = modor::SystemWithParams::check_component_params(::modor::SystemComponentParamChecker::new(system))
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the associated function for candidate #2
   |
296|                     system = modor::SystemWithMissingComponentParam::check_component_params(::modor::SystemComponentParamChecker::new(system))
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
 --> $DIR/systems_with_missing_component_param.rs:8:5
  |
8 |     system!(tuple_with_not_component_entity_params);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ multiple `check_component_params` found
  |
  = note: candidate #1 is defined in an impl of the trait `modor::SystemWithParams` for the type `SystemComponentParamChecker<'a, 'b, S, T>`
  = note: candidate #2 is defined in an impl of the trait `modor::SystemWithMissingComponentParam` for the type `SystemComponentParamChecker<'a, 'b, S, (A,)>`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: disambiguate the associated function for candidate #1
  |
29|                     system = modor::SystemWithParams::check_component_params(::modor::SystemComponentParamChecker::new(system))
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the associated function for candidate #2
  |
29|                     system = modor::SystemWithMissingComponentParam::check_component_params(::modor::SystemComponentParamChecker::new(system))
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
